--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -21,10 +21,11 @@ Politecnico di Milano, Milan, Italy
 
 M.S. in Software Engineering \hfill July 2015
 
-B.S. in Software Engineering \hfill July 2013\\
+B.S. in Information Technologies \hfill July 2013\\
 Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow, Russia\\
 Department of Informational Technologies, Chair of Mathematical Support and Standardization of Information Technologies\\
-Add. \hfill July 2013\\
+
+Add. Professional activity area interpreter (IT) \hfill July 2013\\
 Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow, Russia\\
 Foreign Languages College\\
 
@@ -49,7 +50,7 @@ Languages:
 \begin{itemize}
 	\item Russian (native)
 	\item English (upper-intermediate)
-	\item Italian (per-intermediate)
+	\item Italian (pre-intermediate)
 \end{itemize}
 
 \end{document}
