Add personal info

--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -8,9 +8,9 @@
 \begin{center}
 	\textbf{PERSONAL INFORMATION\\}
 \end{center}
-Full name\\
-Email\\
-Links\\
+Full name: \hfill Svetlana Golubeva\\
+E-mail: \hfill attilax.lab@gmail.com \\
+Links: \hfill  \href{https://github.com/attillax}{github}\\
 
 \begin{center}
 	\textbf{EDUCATION}
@@ -32,15 +32,25 @@ Foreign Languages College\\
 \begin{center}
 	\textbf{PROFESSIONAL EXPERIENCE}
 \end{center}	
-.\\
+\begin{itemize}
+	\item 
+	\item 
+	\item 
+\end{itemize}
 
 \begin{center}
 	\textbf{TECHNICAL SKILLS}
 \end{center}
 \begin{itemize}
-	\item 
-	\item 
-	\item 
+	\item Git
+	\item Linux
+	\item \LaTeX
+	\item Basic knowledge of programming languages: \begin{itemize}
+		\item C++
+		\item Java
+		\item MatLAB
+		\item R
+\end{itemize}
 \end{itemize}
 
 \begin{center}
