Add raw content

--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -4,20 +4,27 @@
 \usepackage{fullpage}
 \usepackage{hyperref}
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{document}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{PERSONAL INFORMATION\\}
 \end{center}
+
 Full name: \hfill Svetlana Golubeva\\
 E-mail: \hfill attilax.lab@gmail.com \\
-Links: \hfill  \href{https://github.com/attillax}{github}\\
+Links: \hfill  \href{https://github.com/attillax}{github}, 
+\href{https://www.hackerrank.com/attillax}{HackerRank}\\
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{EDUCATION}
 \end{center}	
 
 M.S. in Data Engineering \hfill Current\\
-Politecnico di Milano, Milan, Italy
+Politecnico di Milano, Milan, Italy\\
+Dipartimento di Elettronica, Informazione e Bioingegneria\\
 
 M.S. in Software Engineering \hfill July 2015
 
@@ -29,30 +36,126 @@ Add. Professional activity area interpreter (IT) \hfill July 2013\\
 Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow, Russia\\
 Foreign Languages College\\
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{PROFESSIONAL EXPERIENCE}
 \end{center}	
+
+2016 --- R\&D engineer (MIREA) (remote)\\
+Development of the model of department's educational and administrative portal.
 \begin{itemize}
-	\item 
-	\item 
-	\item 
+	\item requirements analysis
+	\item formalization administrative of structure of the department
+	\item knowledge management
+	\item building of functional model of the portal
+	\item building of conceptual model of the portal
+	\item project management
+	\item selection of implementation tools
+	\item implementation supervision
+	\item development of search engine
 \end{itemize}
 
+2013--2016 --- technical consultant (MIREA) (remote)\\
+Development of the proposal to transfer of the department's infrastructure to open source software.
+\begin{itemize}
+	\item selection and comparison of open source analogs for software used in educational process
+	\item selection and preparation of Linux distribution to install
+	\item optimization of network infrastructure
+	\item solution of complex tasks\\
+\end{itemize}
+
+2011--2013 --- System administrator (MIREA)
+\begin{itemize}
+	\item network administration
+	\item PC administration
+	\item paperwork for educational department
+	\item assistance for professors
+\end{itemize}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\begin{center}
+	\textbf{OTHER PROJECTS}
+\end{center}
+
+\textbf{Finished:}\\
+\underline{2015 --- Beer \& Fish}\\
+Goal: to optimize trading expenses and build prediction model of types of beer to sold.\\
+Results:
+\begin{itemize}
+	\item increased sales and level of customer satisfaction
+	\item decreased expences\\
+\end{itemize}
+
+\underline{2015 --- LoDe}\\
+Goal: to find out if there is a hidden or suspicious activity  based on given ``blind`` financial reports.\\
+Results:
+\begin{itemize}
+	\item ``blindness`` of data makes analysis harder
+	\item global market trends were discovered\\
+\end{itemize}
+
+\underline{2012 --- SEPP}\\
+Goal: to predict stock exchange prices and build optimal trading strategy for given assets.\\
+Results: 
+\begin{itemize}
+	\item strategy was successful for 9 of 10 companies
+	\item total revenue growth for trader exceeds the expected rate by 10\%\\
+\end{itemize}
+
+
+\underline{2011 --- RetroDom}\\
+Goal: to build 3d models and virtual tours of houses based on engineering drawings.\\
+Results: 
+\begin{itemize}
+	\item increased rate of sales
+	\item company growth\\
+\end{itemize}
+
+\textbf{Current:}\\
+\underline{cfft}\\
+Goal: to implement cross-platform and independent from third-party libraries fast-fourier transform (forward and backward). (Part of further refopt project)\\
+Steps to do:
+\begin{itemize}
+	\item examine the theoretical base
+	\item develop and implement program's architecture
+	\item code optimization and refactoring
+	\item write documentation
+	\item form the release
+	\item further project's support\\
+\end{itemize}
+
+
+\textbf{Upcoming:}\\
+\underline{refopt}\\
+Goal: to transfer existing scientific code from SciLab to C, with improvement of performance, scalability and independense from third-party libraries.\\
+
+\underline{Beer \& Fish II}\\
+Goal: to find better location for a new shop based on economic, social and urbanistic aspects of given area.\\
+
+\underline{WaterStat}\\
+Goal: to find out if there are significant patterns in the consumption of water resources and propose ways to increase effectiveness of management of the resourses and decrease the environmental affects.\\
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{TECHNICAL SKILLS}
 \end{center}
 \begin{itemize}
-	\item Git
-	\item Linux
-	\item \LaTeX
-	\item Basic knowledge of programming languages: \begin{itemize}
-		\item C++
-		\item Java
-		\item MatLAB
-		\item R
-\end{itemize}
+	\item Operating systems: Linux (Debian -- Slackware) / Windows (XP -- 7)
+	\item Programming languages (basics): \LaTeX / R / Octave / C++ / Python / Java 
+	\item VCS: Git
 \end{itemize}
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\begin{center}
+	\textbf{KEY INTERESTS}
+\end{center}
+\begin{itemize}
+	\item Machine learning / Statistical Analysis
+	\item Information retrieval / Data mining
+	\item Digital image analysis
+	\item Computer graphics
+\end{itemize}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{ADDITIONAL INFORMATION}
 \end{center}
@@ -63,4 +166,5 @@ Languages:
 	\item Italian (pre-intermediate)
 \end{itemize}
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \end{document}
