Add polimi end date

--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -22,7 +22,7 @@ Links: \hfill  \href{https://github.com/attillax}{github},
 	\textbf{EDUCATION}
 \end{center}	
 
-M.S. in Data Engineering \hfill Current\\
+M.S. in Data Engineering \hfill 2017\\
 Politecnico di Milano, Milan, Italy\\
 Dipartimento di Elettronica, Informazione e Bioingegneria\\
 
