Change personal info

--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -13,8 +13,10 @@
 \end{center}
 
 Full name: \hfill Svetlana Golubeva\\
+Citizenship: \hfill Russian Federation\\
+Birth date: \hfill 31-10-1989\\
 E-mail: \hfill attilax.lab@gmail.com \\
-Links: \hfill  \href{https://github.com/attillax}{github}, 
+Links: \hfill  \href{}{Linkedin}, \href{https://github.com/attillax}{github}, 
 \href{https://www.hackerrank.com/attillax}{HackerRank}\\
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
