Add current employment

--- a/SvetlanaGolubevaCV.tex
+++ b/SvetlanaGolubevaCV.tex
@@ -42,8 +42,9 @@ Foreign Languages College\\
 \begin{center}
 	\textbf{PROFESSIONAL EXPERIENCE}
 \end{center}	
+2016 --- technical support ($ OMC^{2} $ design group) (full time) \\
 
-2016 --- R\&D engineer (MIREA) (remote)\\
+2016--2016 --- R\&D engineer (MIREA) (remote)\\
 Development of the model of department's educational and administrative portal.
 \begin{itemize}
 	\item requirements analysis
@@ -66,7 +67,7 @@ Development of the proposal to transfer of the department's infrastructure to op
 	\item solution of complex tasks\\
 \end{itemize}
 
-2011--2013 --- System administrator (MIREA)
+2011--2013 --- System administrator (MIREA) (part time)
 \begin{itemize}
 	\item network administration
 	\item PC administration
