--- a/SvetlanaGolubevaCV_en.tex
+++ b/SvetlanaGolubevaCV_en.tex
@@ -31,11 +31,14 @@ Dipartimento di Elettronica, Informazione e Bioingegneria\\
 M.S. in Software Engineering \hfill July 2015
 
 B.S. in Information Technologies \hfill July 2013\\
-Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow, Russia\\
-Department of Informational Technologies, Chair of Mathematical Support and Standardization of Information Technologies\\
+Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow,
+ Russia\\
+Department of Informational Technologies, Chair of Mathematical Support and 
+Standardization of Information Technologies\\
 
 Add. Professional activity area interpreter (IT) \hfill July 2013\\
-Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow, Russia\\
+Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow,
+ Russia\\
 Foreign Languages College\\
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -44,11 +47,11 @@ Foreign Languages College\\
 \end{center}	
 2016 --- technical support ($ OMC^{2} $ design group) (full time) \\
 
-2016--2016 --- R\&D engineer (MIREA) (remote)\\
+2015--2016 --- R\&D engineer (MIREA) (remote)\\
 Development of the model of department's educational and administrative portal.
 \begin{itemize}
 	\item requirements analysis
-	\item formalization administrative of structure of the department
+	\item formalization of administrative structure of the department
 	\item knowledge management
 	\item building of functional model of the portal
 	\item building of conceptual model of the portal
@@ -58,10 +61,12 @@ Development of the model of department's educational and administrative portal.
 	\item development of search engine
 \end{itemize}
 
-2013--2016 --- technical consultant (MIREA) (remote)\\
-Development of the proposal to transfer of the department's infrastructure to open source software.
+2013--2015 --- technical consultant (MIREA) (remote)\\
+Development of the proposal to transfer of the department's infrastructure to 
+open source software.
 \begin{itemize}
-	\item selection and comparison of open source analogs for software used in educational process
+	\item selection and comparison of open source analogs for software used 
+in educational process
 	\item selection and preparation of Linux distribution to install
 	\item optimization of network infrastructure
 	\item solution of complex tasks\\
@@ -82,7 +87,8 @@ Development of the proposal to transfer of the department's infrastructure to op
 
 \textbf{Finished:}\\
 \underline{2015 --- Beer \& Fish}\\
-Goal: to optimize trading expenses and build prediction model of types of beer to sold.\\
+Goal: to optimize trading expenses and build prediction model of types of beer 
+to sold.\\
 Results:
 \begin{itemize}
 	\item increased sales and level of customer satisfaction
@@ -90,7 +96,8 @@ Results:
 \end{itemize}
 
 \underline{2015 --- LoDe}\\
-Goal: to find out if there is a hidden or suspicious activity  based on given ``blind`` financial reports.\\
+Goal: to find out if there is a hidden or suspicious activity  based on given 
+``blind`` financial reports.\\
 Results:
 \begin{itemize}
 	\item ``blindness`` of data makes analysis harder
@@ -98,7 +105,8 @@ Results:
 \end{itemize}
 
 \underline{2012 --- SEPP}\\
-Goal: to predict stock exchange prices and build optimal trading strategy for given assets.\\
+Goal: to predict stock exchange prices and build optimal trading strategy for 
+given assets.\\
 Results: 
 \begin{itemize}
 	\item strategy was successful for 9 of 10 companies
@@ -107,7 +115,8 @@ Results:
 
 
 \underline{2011 --- RetroDom}\\
-Goal: to build 3d models and virtual tours of houses based on engineering drawings.\\
+Goal: to build 3d models and virtual tours of houses based on engineering 
+drawings.\\
 Results: 
 \begin{itemize}
 	\item increased rate of sales
@@ -116,7 +125,8 @@ Results:
 
 \textbf{Current:}\\
 \underline{cfft}\\
-Goal: to implement cross-platform and independent from third-party libraries fast-fourier transform (forward and backward). (Part of further refopt project)\\
+Goal: to implement cross-platform and independent from third-party libraries 
+fast-fourier transform (forward and backward). (Part of further refopt project)\\
 Steps to do:
 \begin{itemize}
 	\item examine the theoretical base
@@ -130,20 +140,25 @@ Steps to do:
 
 \textbf{Upcoming:}\\
 \underline{refopt}\\
-Goal: to transfer existing scientific code from SciLab to C, with improvement of performance, scalability and independense from third-party libraries.\\
+Goal: to transfer existing scientific code from SciLab to C, with improvement of
+ performance, scalability and independense from third-party libraries.\\
 
 \underline{Beer \& Fish II}\\
-Goal: to find better location for a new shop based on economic, social and urbanistic aspects of given area.\\
+Goal: to find better location for a new shop based on economic, social and 
+urbanistic aspects of given area.\\
 
 \underline{WaterStat}\\
-Goal: to find out if there are significant patterns in the consumption of water resources and propose ways to increase effectiveness of management of the resourses and decrease the environmental affects.\\
+Goal: to find out if there are significant patterns in the consumption of water 
+resources and propose ways to increase effectiveness of management of the 
+resourses and decrease the environmental affects.\\
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\textbf{TECHNICAL SKILLS}
 \end{center}
 \begin{itemize}
 	\item Operating systems: Linux (Debian -- Slackware) / Windows (XP -- 7)
-	\item Programming languages (basics): \LaTeX / R / Octave / C++ / Python / Java 
+	\item Programming languages (basics): \LaTeX / R / Octave / C++ / Python
+ / Java 
 	\item VCS: Git
 \end{itemize}
 
@@ -154,8 +169,7 @@ Goal: to find out if there are significant patterns in the consumption of water 
 \begin{itemize}
 	\item Machine learning / Statistical Analysis
 	\item Information retrieval / Data mining
-	\item Digital image analysis
-	\item Computer graphics
+	\item Digital image analysis / Computer graphics
 \end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
