Add detailed work experience

--- a/SvetlanaGolubevaCV_en.tex
+++ b/SvetlanaGolubevaCV_en.tex
@@ -4,9 +4,11 @@
 \usepackage[a4paper]{geometry}		
 \geometry{top=1.5cm, bottom=1.5cm, left=2cm, right=1.5cm} 	
 \usepackage{hyperref}
+\usepackage{enumitem}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{document}
+\setlist{nolistsep}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
@@ -29,18 +31,18 @@ Links: \hfill  \href{https://github.com/attillax}{github},
 \end{center}	
 
 \underline{2013 -- 2019} --- M.S. in Data Engineering \\
-Politecnico di Milano, Milan, Italy\\
+Politecnico di Milano, Como, Italy\\
 Dipartimento di Elettronica, Informazione e Bioingegneria\\
 
 \underline{2013 -- 2015} --- M.S. in Software Engineering \\
 \underline{2009 -- 2013} --- B.S. in Information Technologies \\
-Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow,
+Moscow State Institute of Radio Engineering, Electronics and Automation (MIREA), Moscow,
  Russia\\
 Department of Informational Technologies, Chair of Mathematical Support and 
 Standardization of Information Technologies\\
 
 \underline{2011 -- 2013} --- Professional activity area interpreter \\
-Moscow State Institute of Radio Engineering, Electronics and Automation, Moscow,
+Moscow State Institute of Radio Engineering, Electronics and Automation (MIREA), Moscow,
  Russia\\
 Foreign Languages College\\
 
@@ -49,45 +51,77 @@ Foreign Languages College\\
 	\underline{\textbf{PROFESSIONAL EXPERIENCE}}
 \end{center}	
 
-\underline{2016 -- nowadays} --- $ OMC^{2} $ design studios (A' Design Award) (full time freelance) \\
-
-\underline{2015 -- 2018} --- R\&D engineer (MIREA) (remote)\\
-Development of the model of department's educational and administrative portal.
+\underline{2016 -- current} --- technical support (full time freelance)\\
+$ OMC^{2} $ design studios (A' Design Award \& Competition), Como, Italy
 \begin{itemize}
-	\item requirements analysis
-	\item formalization of administrative structure of the department
-	\item knowledge management
-	\item building of functional model of the portal
-	\item building of conceptual model of the portal
-	\item project management
-	\item selection of implementation tools
-	\item implementation supervision
-	\item development of search engine
+	\item[--] management of IT infrastructure
+	\item[--] software development
+	\item[--] research on topics
+	\item[--] events organization 
+	\item[--] optimization of business processes
+	\item[--] development of SMM strategies \\
 \end{itemize}
 
-\underline{2011 -- 2013} ---  technical consultant (MIREA) (remote)\\
-Development of the proposal to transfer of the department's infrastructure to 
-open source software.
+\underline{2018 -- current} --- technical consultant (remote)\\
+Interuniversity research laboratory of coherent phase microscopy (MIREA), Moscow, Russia
 \begin{itemize}
-	\item selection and comparison of open source analogs for software used 
-in educational process
-	\item selection and preparation of Linux distribution to install
-	\item optimization of network infrastructure
-	\item solution of complex tasks\\
+	\item[--] Development of teaching materials for <<IT in optotechnics>> course
+	\item[--] Integration of ML methods into current researches \\
 \end{itemize}
 
-\underline{2011 -- 2013} --- System administrator (MIREA) (part time)
+\underline{2015 -- 2018} --- R\&D engineer (remote)\\
+Software and IT-Standard department (MIREA), Moscow, Russia
 \begin{itemize}
-	\item network administration
-	\item PC administration
-	\item paperwork for educational department
-	\item assistance for professors
+	\item[--] project management and implementation supervision for current projects
+	\item[--] development of search engine for the department's portal
+	\item[--] <<KettleNet>> project\\
 \end{itemize}
+
+\underline{2013 -- 2015} ---  technical consultant (remote)\\
+Software and IT-Standard department (MIREA), Moscow, Russia
+\begin{itemize}
+	\item[--] development of the proposal for transfer of the department's infrastructure from proprietary to 
+	open source software
+	\item[--] development of the architecture for department's educational and administrative portal
+	\item[--] improvements of teaching courses for the chair
+	\item[--] solution of complex tasks \\
+\end{itemize}
+
+\underline{2011 -- 2013} --- System administrator (part time)\\
+ Chair of Mathematical Support and Standardization of Information Technologies (MIREA), Moscow, Russia
+\begin{itemize}
+	\item[--] PC and network administration
+	\item[--] paperwork for educational department
+	\item[--] teaching assistance for professors\\
+\end{itemize}
+
+\underline{2009 -- 2010} --- Rescue service cadet\\
+MIREA, Moscow, Russia
+\begin{itemize}
+	\item[--] provision of security and emergency services in the University
+	\item[--] training of emergency response for students and personnel \\
+\end{itemize}
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\underline{\textbf{PROJECTS}}
 \end{center}
+
+\underline{2018 --- Cells}\\
+Goal: PhD.\\
+
+\underline{2017 --- KettleNet}\\
+Goal: to prevent and block unauthorized access to IoT device.\\
+
+\underline{2017 --- Beer \& Fish II}\\
+Goal: to find better location for a new shop based on economic, social and 
+urbanistic aspects of given area.\\
+
+\underline{2016 --- WaterStat}\\
+Goal: to find out if there are significant patterns in the consumption of water 
+resources and propose ways to increase effectiveness of management of the 
+resourses and decrease the environmental affects.\\
 
 \underline{2015 --- Beer \& Fish}\\
 Goal: to optimize trading expenses and build prediction model of types of beer 
@@ -126,22 +160,15 @@ Results:
 	\item company growth\\
 \end{itemize}
 
-\underline{Beer \& Fish II}\\
-Goal: to find better location for a new shop based on economic, social and 
-urbanistic aspects of given area.\\
-
-\underline{WaterStat}\\
-Goal: to find out if there are significant patterns in the consumption of water 
-resources and propose ways to increase effectiveness of management of the 
-resourses and decrease the environmental affects.\\
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\underline{\textbf{TECHNICAL SKILLS}}
 \end{center}
 \begin{itemize}
-	\item Operating systems: Linux (Debian, Slackware, LFS) / Windows (XP, 7, 10)
-	\item Programming languages: \LaTeX / R / Octave / Python / C++ 
-	\item VCS: Git
+	\item \underline{Operating systems}: \hspace{1.5cm} Linux (Debian, Slackware, LFS) / Windows (XP, 7, 10)
+	\item \underline{Programming languages}: \hspace{0.6cm} \LaTeX / TiKz / R / Octave / Python / C / C++ 
+	\item \underline{VCS}: \hspace{3.6cm} Git
+	\item \underline{Software}: \hspace{3cm} Emacs, \TeX Studio, OpenOffice\\
 \end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -151,18 +178,27 @@ resourses and decrease the environmental affects.\\
 \begin{itemize}
 	\item Machine learning / Statistical Analysis
 	\item Information retrieval / Data mining
-	\item Digital image analysis / Computer graphics
+	\item Digital image analysis / Computer graphics\\
+\end{itemize}
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\begin{center}
+	\underline{\textbf{RECOMMENDATIONS}}
+\end{center}
+\begin{itemize}
+	\item Anton Mironov, <<amirinov@mirea.ru>>, head of Samsung IoT laboratory
+	\item Vladislav Zverzhovskiy, <<@mirea.ru>>, assistant\\
 \end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\underline{\textbf{ADDITIONAL INFORMATION}}
 \end{center}
-
 \begin{itemize}
-	\item Languages: Russian (native), English (pre-advanced), Italian (intermediate)
-	\item Hobbies: Hiking, Photography, Writing, Knitting, Sewing
+	\item \underline{Languages}: Russian (native), English (pre-advanced), Italian (intermediate)
+	\item \underline{Hobbies}: Hiking, Photography, Writing, Knitting, Sewing
 \end{itemize}
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \end{document}
