Fix projects descriptions

--- a/SvetlanaGolubevaCV_en.tex
+++ b/SvetlanaGolubevaCV_en.tex
@@ -102,63 +102,37 @@ MIREA, Moscow, Russia
 	\item[--] training of emergency response for students and personnel \\
 \end{itemize}
 
-
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
 	\underline{\textbf{PROJECTS}}
 \end{center}
 
 \underline{2018 --- Cells}\\
-Goal: PhD.\\
+The goal of this project is to build a model that allow to determine parameters of a cell from its phase image and then define cell's type.\\
 
 \underline{2017 --- KettleNet}\\
-Goal: to prevent and block unauthorized access to IoT device.\\
+The goal of this project is to prevent and block an attack on IoT devices on early stages.\\
 
 \underline{2017 --- Beer \& Fish II}\\
-Goal: to find better location for a new shop based on economic, social and 
+The goal of this project was to find better location for a new shop based on economic, social and 
 urbanistic aspects of given area.\\
 
 \underline{2016 --- WaterStat}\\
-Goal: to find out if there are significant patterns in the consumption of water 
-resources and propose ways to increase effectiveness of management of the 
-resourses and decrease the environmental affects.\\
+The goal of this project was to find out if there are significant patterns in the consumption of water resources and propose ways to increase effectiveness of management of the resources and decrease the environmental affects.\\
 
 \underline{2015 --- Beer \& Fish}\\
-Goal: to optimize trading expenses and build prediction model of types of beer 
-to sold.\\
-Results:
-\begin{itemize}
-	\item increased sales and level of customer satisfaction
-	\item decreased expences\\
-\end{itemize}
+The goal of this project was to optimize trading expenses and build prediction model of beer types to be sold.\\
 
 \underline{2015 --- LoDe}\\
-Goal: to find out if there is a hidden or suspicious activity  based on given 
-``blind`` financial reports.\\
-Results:
-\begin{itemize}
-	\item ``blindness`` of data makes analysis harder
-	\item global market trends were discovered\\
-\end{itemize}
+The goal of this project was to find out if there is a hidden or suspicious activity  based on given ''blind'' financial reports.\\
 
 \underline{2012 --- SEPP}\\
-Goal: to predict stock exchange prices and build optimal trading strategy for 
+The goal of this project was to predict stock exchange prices and build optimal trading strategy for 
 given assets.\\
-Results: 
-\begin{itemize}
-	\item strategy was successful for 9 of 10 companies
-	\item total revenue growth for trader exceeds the expected rate by 10\%\\
-\end{itemize}
-
 
 \underline{2011 --- RetroDom}\\
-Goal: to build 3d models and virtual tours of houses based on engineering 
+The goal of this project was to build 3d models and virtual tours of houses based on engineering 
 drawings.\\
-Results: 
-\begin{itemize}
-	\item increased rate of sales
-	\item company growth\\
-\end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
@@ -186,8 +160,8 @@ Results:
 	\underline{\textbf{RECOMMENDATIONS}}
 \end{center}
 \begin{itemize}
-	\item Anton Mironov, <<amirinov@mirea.ru>>, head of Samsung IoT laboratory
-	\item Vladislav Zverzhovskiy, <<@mirea.ru>>, assistant\\
+	\item Anton Mironov, <<Amironov1993@yandex.ru>>, head of Samsung IoT laboratory
+	\item Vladislav Zverzhovskiy, <<wladzwer@mail.ru>>, teaching assistant in interuniversity research laboratory of coherent phase microscopy\\
 \end{itemize}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
