Update skills section

--- a/CV_SvetlanaGolubeva_IT_ita_photo.tex
+++ b/CV_SvetlanaGolubeva_IT_ita_photo.tex
@@ -41,13 +41,14 @@
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \begin{center}
-	\underline{\textbf{\large Skills:}}
+	\underline{\textbf{\large Competenze:}}
 \end{center}
-\underline{Programming languages}: Python, SQL, R, C.\\
-\underline{Metodologie}: Agile, Scrum, Kanban.\\
+\underline{Linguaggi di programmazione}: Python, SQL, R, C.\\
+\underline{Metodologie di sviluppo}: Agile, Scrum, Kanban.\\
+\underline{Aree di competenza}: Amministrazione delle reti, analisi dei dati, automatizazione dei processi.\\
 \underline{OS}: Windows, Linux (Debian, Slackware, LFS).\\
-\underline{Other}: Git, MS Office, \LaTeX, TiKz, UML, BPM, Emacs, Tableau.\\
-\underline{Lingue:} Russo (madrelingua), Italiano (avanzato), Inglese (avanzato), Tedesco (scolastico), Francese (scolastico).\\
+\underline{Altro}: Git, MS Office, \LaTeX, TiKz, UML, BPM, Emacs, Notion, Tableau.\\
+\underline{Lingue:} Russo (madrelingua), Italiano (avanzato), Inglese (avanzato), Tedesco (scolastico), Francese (scolastico).%\\
 %\hline
 %\vspace{10pt}
 
@@ -74,7 +75,7 @@
 \begin{itemize}
 	\item[--] Ottimizzazione dei processi aziendali.	
 	\item[--] Gestione del personale sulla linea di produzione.
-	\item[--] Miglioramento della catena di preparazione della merce.
+%	\item[--] Miglioramento della catena di preparazione della merce.
 \end{itemize}
 \underline{Specialista della Logistica}, Settembre 2017 - Aprile 2019.
 \begin{itemize}
